FINP-1238 Correct positioning defect  - The logic which positions the linkgroups did not take into account    a particular height/width that would cause it to render with the bottom    cutoff. This has been fixed.  - horizontal scrolling is turned off in linkgroups and when a linkgroup    activates it autoscrolls to the top  - Fix search results to be sized correctly (max-height fixed)

--- a/kfs-web/src/main/webapp/css/newPortal.css
+++ b/kfs-web/src/main/webapp/css/newPortal.css
@@ -408,6 +408,10 @@ nav ul.nav li {
     box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, .15);
 }
 
+#sidebar ul > li.search > div.sublinks {
+    max-height: 625px;
+}
+
 #sidebar.collapsed ul > li.list-item,
 #sidebar.collapsed .refresh {
     opacity: 0;
@@ -536,7 +540,7 @@ nav ul.nav li {
     border-bottom-left-radius: 3px;
     max-height: 97%;
     min-height: 75px;
-    overflow-x: auto;
+    overflow-x: hidden;
 }
 
 #sidebar .sublinks.col-3 {
